Major Admin Control Commit

--- a/public/CSS/admin-forms.css
+++ b/public/CSS/admin-forms.css
@@ -1,13 +1,12 @@
 .section-register-admin{
     height: 100vh;
-
 }
 
 .section-register-admin .container{
     width: 50%;
     display: flex;
-    justify-content: center; /* Horizontally center content */
-    align-items: center; /* Vertically center content */
+    justify-content: center;
+    align-items: center;
 
     border: solid 3px rgb(74, 83, 118);
     border-radius: 5px;
