--- a/public/CSS/header-footer.css
+++ b/public/CSS/header-footer.css
@@ -8,16 +8,6 @@
     text-decoration: none;
 }
 
-.main-home{
-    width: 100%;
-    height: 100vh;
-    background-image: url(/Images/Layouts/KCLYNE-Banner.png);
-    background-position: center;
-    background-size: cover;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    align-items: center;
-}
 
 header{
     background-color: rgb(74, 83, 118);
@@ -59,11 +49,11 @@ header{
 }
 
 .search input[type="text"] {
-    max-height: 22px;
+    height: 25px;
     padding: 3px;
     text-align: center;
-    font-size: 13px;
     margin-right: 10px;
+    margin-bottom: 5px;
     border: none;
     border-radius: 3px;
 }
@@ -72,6 +62,10 @@ header{
     color: #ffffff;
     font-size: 25px;
     font-weight: 400;
+}
+
+.search i:hover{
+    color: rgb(194, 156, 156);
 }
 
 .logout-button {
@@ -83,7 +77,7 @@ header{
 }
 
 .navmenu a:hover{
-    color: rgb(232, 113, 33);
+    color: rgb(194, 156, 156);
     font-size: 17px;
 }
 
@@ -102,7 +96,7 @@ header{
 
 .nav-icon i:hover{
     transform: scale(1.1, .2s);
-    color: rgb(232, 113, 33);
+    color: rgb(194, 156, 156);
 }
 
 #menu-icon{
@@ -125,7 +119,7 @@ section{
 }
 
 .main-text h1{
-    color: rgb(232, 113, 33);
+    color: rgb(194, 156, 156);
     font-size: 65px;
     text-transform: capitalize;
     line-height: 1.1;
@@ -171,7 +165,8 @@ header.sticky{
 /* contact-section */
 
 .contact{
-    background-color: rgb(228, 172, 135);
+    /* background-color: rgb(228, 153, 104); */
+    background-color: rgb(218, 178, 178);
 }
 
 .contact-info{
@@ -188,7 +183,7 @@ header.sticky{
 }
 
 .contact-info h4{
-    color: rgb(232, 113, 33);
+    color: rgb(74, 83, 118);
     font-size: 14px;
     text-transform: uppercase;
     margin-bottom: 10px;
@@ -211,9 +206,10 @@ header.sticky{
 
 .social-icon a{
     padding: 5px 15px;
-    color: rgb(232, 113, 33);
+    color: rgb(74, 83, 118);
 }
 
 .social-icon a:hover{
     font-size: 21px;
 }
+
