--- a/public/CSS/product-management.css
+++ b/public/CSS/product-management.css
@@ -1,12 +1,117 @@
+/* SECTION ////////////////////////////////////////// */
+
 .product-management {
     display: flex;
+    height: 100vh;
     justify-content: space-between; /* To create two columns */
     align-items: flex-start; /* Align items at the top of the section */
 }
 
 .create-product,
 .show-product {
-    width: calc(50% - 10px); /* Set width for each part */
+    width: calc(50% - 5px); /* Set width for each part */
     padding: 20px; /* Add padding for spacing */
     box-sizing: border-box; /* Include padding in width calculation */
+}
+
+/* PRODUCT CREATE ////////////////////////////////////////// */
+
+.create-product {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: 80vh;
+}
+
+.form-create-product {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 5px 10px rgb(74, 83, 118);
+    background-color: #fff;
+    text-align: center;
+    width: 700px;
+}
+
+.form-create-product p{
+    font-size: 14px;
+}
+
+.form-create-product a{
+    font-weight: 1000;
+    color: rgb(194, 156, 156);
+}
+
+.form-create-product h2{
+    font-size: 20px;
+    width: 100%;
+    height: 50px;
+    border-radius: 5px;
+    color: #fff;
+    margin: 0; /* Reset margin */
+    margin-bottom: 20px;
+    display: flex; /* Use Flexbox */
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+    background-color: rgb(74, 83, 118);
+}
+
+.form-create-product input{
+    width: 300px;
+    padding: 10px 15px;
+    font-size: 17px;
+    margin: 8px 0;
+    background: #eee;
+    border-radius: 3px;
+    border-top: 2px solid rgb(194, 156, 156);
+    border-left: 2px solid rgb(194, 156, 156);
+    border-right: 1px solid rgb(194, 156, 156);
+    border-bottom: 1px solid rgb(194, 156, 156);
+}
+
+.form-create-product textarea{
+    width: 300px;
+    height: 100px;
+    padding: 10px 15px;
+    font-size: 17px;
+    margin: 8px 0;
+    background: #eee;
+    border-radius: 3px;
+    border-top: 2px solid rgb(194, 156, 156);
+    border-left: 2px solid rgb(194, 156, 156);
+    border-right: 1px solid rgb(194, 156, 156);
+    border-bottom: 1px solid rgb(194, 156, 156);
+}
+
+.form-create-product button{
+    display: inline-block;
+    width: 300px;
+    margin: 5%;
+    padding: 3% 0;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 500;
+    text-transform: capitalize;
+    background: rgb(194, 156, 156);
+    border-radius: 5px;
+    cursor: pointer;
+    border: none;
+    transition: all 1s ease;
+}
+
+/* EFFECTS */
+
+.form-create-product input:hover, 
+.form-create-product textarea:hover{
+    border-top: 2px solid rgb(74, 83, 118);
+    border-left: 2px solid rgb(74, 83, 118);
+    border-right: 1px solid rgb(74, 83, 118);
+    border-bottom: 1px solid rgb(74, 83, 118);
+}
+
+.form-create-product button:hover{
+    background-color: rgb(74, 83, 118);
 }
