--- a/public/CSS/product-management.css
+++ b/public/CSS/product-management.css
@@ -86,11 +86,25 @@
     border-bottom: 1px solid rgb(194, 156, 156);
 }
 
+.form-create-product select{
+    width: 300px;
+    padding: 10px 15px;
+    font-size: 17px;
+    margin: 8px 0;
+    background: #eee;
+    border-radius: 3px;
+    border-top: 2px solid rgb(194, 156, 156);
+    border-left: 2px solid rgb(194, 156, 156);
+    border-right: 1px solid rgb(194, 156, 156);
+    border-bottom: 1px solid rgb(194, 156, 156);
+}
+
+
 .form-create-product button{
     display: inline-block;
     width: 300px;
     margin: 5%;
-    padding: 3% 0;
+    padding: 10px;
     color: #fff;
     font-size: 15px;
     font-weight: 500;
@@ -103,12 +117,16 @@
 }
 
 .group{
+    display: flex;
+    width: 100%;
     justify-content: center;
     align-items:last baseline;
 }
 
 .group label{
-
+    text-align: right;
+    width: 100px;
+    margin-right: 20px
 }
 
 /* EFFECTS */
@@ -123,4 +141,34 @@
 
 .form-create-product button:hover{
     background-color: rgb(74, 83, 118);
+}
+
+
+
+/* DISPLAY PRODUCT ///////////////////////////////////////// */
+
+.product {
+    display: flex;
+}
+
+.row {
+    width: 150px;
+    height: auto;
+    border: 3px solid rgb(194, 156, 156);
+}
+
+.row img {
+    width: 120px;
+    height: auto;
+    display: block; /* Ensures the image behaves like a block element */
+    margin: 0 auto; /* Centers the image horizontally */
+}
+
+.row h3 {
+    width: 100%;
+    font-size: 15px;
+    padding: 7px;
+    text-align: center;
+    background-color: rgb(194, 156, 156);
+    color: #fff;
 }
