--- a/public/CSS/message.css
+++ b/public/CSS/message.css
@@ -31,7 +31,7 @@
     width: 300px;
 }
 
-.form-login-page span{
+.form-admin-login span{
     font-size: 14px;
     padding: 5px;
     background-color: red;
