--- a/public/CSS/product-display.css
+++ b/public/CSS/product-display.css
@@ -8,18 +8,22 @@
 }
 
 .row {
-    width: 200px;
-    height: auto;
+    width: 245px;
+    height: 365px;
     margin: 10px; /* Add margin between each row */
     border: 3px solid rgb(194, 156, 156);
+    transition: all 0.5s ease;
+    z-index: 999;
+    padding: 5px;
+    display: flex; /* Add display flex to make product-info stretch */
+    flex-direction: column; /* Stack child elements vertically */
 }
 
 .row img {
     width: 120px;
-    height: auto;
+    height: 120px;
     display: block; /* Ensures the image behaves like a block element */
     margin: 15px auto; /* Centers the image horizontally */
-    
 }
 
 .row h3 {
@@ -29,7 +33,86 @@
     text-align: center;
     background-color: rgb(194, 156, 156);
     color: #fff;
+    margin-bottom: 5px;
 }
+
+.row:hover {
+    scale: 98%;
+}
+
+.product-info {
+    padding: 7px;
+    background-color: #ebebeb;
+    flex: 1; /* Fill remaining space in the parent container */
+    margin-bottom: 5px;
+    height: 130;
+}
+
+.product-info p{
+    font-size: 12px;
+}
+
+.product-info p[name='description'] {
+    text-align: justify;
+    font-size: 10px;
+    height: 60px;
+    overflow: hidden;
+}
+
+.product-info .form-group{
+    width: 100%;
+    display: flex; /* Use flexbox to layout elements */
+    flex-wrap: wrap; /* Allow elements to wrap to the next line if needed */
+}
+
+label[name="Stat"]{
+    font-size: 12px;
+    font-weight: 800;
+    width: 80%;
+}
+
+.row .form-group-button {
+    display: flex;
+    margin: 0; /* Remove default margin */
+    padding: 0; /* Remove default padding */
+}
+
+.row .form-group-button button {
+    flex: 1; /* Make buttons take up equal space */
+    margin-right: 5px; /* Add 5px right margin between buttons */
+    font-size: 13px;
+    font-weight: 500;
+    transition: all 0.5s ease;
+}
+
+.row .form-group-button button[name="update"] {
+    border: 3px solid rgb(74, 83, 118);
+    background-color: #fff;
+    color: rgb(74, 83, 118);
+}
+
+.row .form-group-button button[name="delete"] {
+    border: 3px solid rgb(194, 156, 156);
+    background-color: #fff;
+    color: rgb(194, 156, 156);
+}
+
+.row .form-group-button button[name="update"]:hover {
+    border: 3px solid rgb(74, 83, 118);
+    background-color: rgb(74, 83, 118);
+    color: #fff;
+    scale: 98%;
+}
+
+.row .form-group-button button[name="delete"]:hover {
+    border: 3px solid rgb(194, 156, 156);
+    background-color: rgb(194, 156, 156);
+    color: #fff;
+    scale: 98%;
+}
+
+
+
 
 
 /* PRODUCT CUSTOMER DISPLAY =================================================== */
