--- a/public/CSS/product-management.css
+++ b/public/CSS/product-management.css
@@ -5,12 +5,11 @@
     height: 100vh;
     justify-content: space-between; /* To create two columns */
     align-items: flex-start; /* Align items at the top of the section */
-    padding: 5% 5% 5% 10%;
+    padding: 5% 5% 5% 7%;
 }
 
 .create-product{
     width: calc(35% - 5px); /* Set width for each part */
-    padding: 20px; /* Add padding for spacing */
     box-sizing: border-box; /* Include padding in width calculation */
 }
 .show-product {
@@ -24,7 +23,7 @@
 .create-product {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
     height: 80vh;
 }
@@ -38,7 +37,7 @@
     box-shadow: 0 5px 10px rgb(74, 83, 118);
     background-color: #fff;
     text-align: center;
-    width: 700px;
+
 }
 
 .form-create-product p{
@@ -50,7 +49,8 @@
     color: rgb(194, 156, 156);
 }
 
-.form-create-product h2{
+.form-create-product h2,
+.show-product h2 {
     font-size: 20px;
     width: 100%;
     height: 50px;
@@ -150,3 +150,9 @@
 
 /* SHOW PRODUCT SECTION */
 
+.show-product{
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 5px 10px rgb(74, 83, 118);
+    background-color: #fff;
+}
