--- a/public/CSS/customer-forms.css
+++ b/public/CSS/customer-forms.css
@@ -3,20 +3,70 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    height: 80vh;
+    height: 100vh;
 }
 
-.register {
-    width: 80%; /* Adjust the width as needed */
-    max-width: 400px; /* Optionally, set a maximum width */
+/* .register {
+    width: 80%;
+    max-width: 400px; 
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #f9f9f9;
+} */
+
+.register .form-group{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: last baseline;
+}
+
+.register h2{
+    font-size: 20px;
+    width: 100%;
+    height: 50px;
+    border-radius: 5px;
+    color: #fff;
+    margin: 0; /* Reset margin */
+    margin-bottom: 20px;
+    display: flex; /* Use Flexbox */
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+    background-color: rgb(74, 83, 118);
+}
+
+.form-customer-register input{
+    width: 300px;
+    padding: 10px 15px;
+    font-size: 17px;
+    margin: 8px 0;
+    background: #eee;
+    border-radius: 3px;
+    border-top: 2px solid rgb(194, 156, 156);
+    border-left: 2px solid rgb(194, 156, 156);
+    border-right: 1px solid rgb(194, 156, 156);
+    border-bottom: 1px solid rgb(194, 156, 156);
+}
+
+.form-customer-register select{
+    width: 300px;
+    padding: 10px 15px;
+    font-size: 17px;
+    margin: 8px 0;
+    background: #eee;
+    border-radius: 3px;
+    border-top: 2px solid rgb(194, 156, 156);
+    border-left: 2px solid rgb(194, 156, 156);
+    border-right: 1px solid rgb(194, 156, 156);
+    border-bottom: 1px solid rgb(194, 156, 156);
 }
 
 .register .form-group label{
-    width: 100px;
+    text-align: right;
+    width: 120px;
+    font-size: 15px;
+    margin-right: 20px;
 }
 
 .form-customer-register {
@@ -28,7 +78,28 @@
     box-shadow: 0 5px 10px rgb(74, 83, 118);
     background-color: #fff;
     text-align: center;
-    width: 700px;
+    width: 500px;
+    margin-top: 100px;
+}
+
+.form-customer-register button{
+    display: inline-block;
+    width: 300px;
+    margin: 5%;
+    padding: 3% 0;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 500;
+    text-transform: capitalize;
+    background: rgb(194, 156, 156);
+    border-radius: 5px;
+    cursor: pointer;
+    border: none;
+    transition: all 0.5s ease;
+}
+
+.form-customer-register button:hover{
+    background: rgb(74, 83, 118);
 }
 
 /* LOGIN PAGE */
